--- a/curriculum_vitae.yaml
+++ b/curriculum_vitae.yaml
@@ -1157,7 +1157,7 @@ teaching:
   -
     title: "Logic III: Gödel's Incompleteness Theorems"
     number: Phil 479/679.01
-    date: Winter 2004, Winter 2007, Fall 2008, Winter 2010, Winter 2012, Winter 2017, Fall 2018
+    date: Winter 2004, Winter 2007, Fall 2008, Winter 2010, Winter 2012, Winter 2017, Fall 2018, Winter 2025
     type: grad
   -
     title: "How Do We Know?"
